fixed ugly line wrapping for about me text. Now displays over 4 lines for mid-large viewports

--- a/src/containers/Home/Home.module.css
+++ b/src/containers/Home/Home.module.css
@@ -20,7 +20,7 @@
 .AboutMe {
   margin: auto 20px auto 20px;
   text-align: center;
-  max-width: 700px;
+  max-width: 720px;
   color: #474747;
 }
 
